testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignedClassInstance3.errors.txt
index.js(8,16): error TS2339: Property 'additional' does not exist on type 'Foo'.


==== index.js (1 errors) ====
    class Foo {
        static stat = 10;
        member = 10;
    }
    
    module.exports = new Foo();
    
    module.exports.additional = 20;
                   ~~~~~~~~~~
!!! error TS2339: Property 'additional' does not exist on type 'Foo'.